# CorteX

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml
docs/: PRODUCTION_REVIEW.md
scripts/: build-vite.mjs
src/: App.tsx  PopupApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  desktop.rs  lib.rs  main.rs  models.rs  providers.rs  shortcuts.rs  state.rs  text.rs  tray.rs
src/components/: ProviderWizard.tsx
src/data/: modes.ts  prompts.ts  providers.ts
src/lib/: desktop.ts  documentImport.ts
